About
=====
This file lists changes between tagged gorilla releases.

New releases are tagged twice, as "go1" and using the release
version, e.g. "r2012.04.05". Changes that are not backward
compatible are highligthed in the release notes using an
exclamation mark between brackets, as in "[!]".


gorilla r2012.04.05
-------------------
First stable release after Go 1.